# unheard-prod

./: .env.example  .gitignore  .prettierignore  DESIGN_IMPROVEMENTS.md  MULTI_CHAT_SYSTEM.md  README.md  SODT_PATTERNS_APPLIED.md  eslint.config.js  index.html  package-lock.json  package.json
.claude/: AGENTS.md  CLAUDE.md
.claude/plans/: DESIGN_IMPROVEMENTS.md  FINAL-SUMMARY.md  IMPLEMENTATION-PRIORITY.md  MULTI_CHAT_SYSTEM.md  README.md  SLICE-9-startup-screening.md  architecture-decision.md  architecture-diagrams.md  attio-crm-integration.md  cohorts-experiment-assignment.md  complete-data-pipeline.md  context-pipeline-implementation.md  context-system-addendum.md  data-models-spec.md  dataset-extraction-spec.md  eager-percolating-star.md  enhanced-assistant-spec.md  git-integration-spec.md  template-system-spec.md  unheard-electron-plan.md  unheard-ux-first-plan.md  vertical-slice-implementation.md
.flow/: .checkpoint-fn-1-phase-1-context-upload-git-integration.json  .checkpoint-fn-2-phase-2-chat-interface-agent.json
.flow/epics/: fn-1-phase-1-context-upload-git-integration.json  fn-2-phase-2-chat-interface-agent.json
.flow/specs/: fn-1-phase-1-context-upload-git-integration.md  fn-2-phase-2-chat-interface-agent.md
.flow/tasks/: fn-1-phase-1-context-upload-git-integration.1.json  fn-1-phase-1-context-upload-git-integration.1.md  fn-1-phase-1-context-upload-git-integration.2.json  fn-1-phase-1-context-upload-git-integration.2.md  fn-1-phase-1-context-upload-git-integration.3.json  fn-1-phase-1-context-upload-git-integration.3.md  fn-1-phase-1-context-upload-git-integration.4.json  fn-1-phase-1-context-upload-git-integration.4.md  fn-1-phase-1-context-upload-git-integration.5.json  (+19 more)
convex/: README.md  attio.ts  auth.config.ts  auth.ts  chats.ts  cohorts.ts  contexts.ts  decisions.ts  experiments.ts  projects.ts  schema.ts  seed-templates.test.ts  seed-templates.ts  seed_templates.test.ts  seed_templates.ts  templates.ts
coverage/: chat-store.ts.html  clover.xml  coverage-final.json  index.html
docs/: CONTRIBUTING.md  README.md  SECURITY.md
locales/: ar.json  en.json  fr.json
modal_functions/: __init__.py  app.py  experiment_runner.py  insight_extractor.py  persona_generator.py  requirements.txt  sentiment.py  van_westendorp.py
src/: App.css  App.tsx  main.tsx  theme-variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bindings.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: attio.rs  chat.rs  context.rs  decisions.rs  experiments.rs  git.rs  mod.rs  projects.rs
(+122 files in other folders)
