[package]
name = "unheard"
version = "0.1.0"
description = "A decision support tool for founders that provides integrated decision analysis through synthetic data generation, hypothesis testing, and data visualization."
authors = ["bob-rietveld"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unheard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
regex = "1"

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"
git2 = "0.20.4"
csv = "1.4.0"
lopdf = "0.36.0"
# Note: calamine 0.26 does not have xlsb feature
# Excel Binary Format (.xlsb) support is not available in this version
calamine = "0.26"
tauri-plugin-clerk = "0.1.0"
tauri-plugin-http = "2.5.7"
tauri-plugin-store = "2.4.2"
dotenvy = "0.15.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# macOS-only: NSPanel for native panel behavior (fullscreen overlay, click-outside dismiss)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols

